--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="https://use.typekit.net/tcn0eaq.css">
     <title>Simple React App</title>
   </head>
