--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <link rel="stylesheet" href="https://use.typekit.net/tcn0eaq.css">
-    <link rel="icon" href="https://ibb.co/jDqF6Vq" />
+    <link rel="shortcut icon" href="./favicon.png" />
     <script src="https://kit.fontawesome.com/d90640e755.js" crossorigin="anonymous"></script>
     <title>FindTable</title>
   </head>
